# sox_cmake

./: .gitignore  CMakeLists.txt
src/: .gitignore  CMakeLists.txt  effects_i_dsp.c  example_compand.cpp  example_eq.cpp  example_reverb.cpp  formats.c  soxconfig.h  yk_test_memstream.cpp
